# cloudshell-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: connect_via_ssm.rs  full_lifecycle.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs
