[package]
name = "cloudshell-rs"
version = "0.1.0"
edition = "2024"
description = "SSM Client for the AWS CloudShell API"
authors = ["Bart LEBOEUF"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bartleboeuf/cloudshell-rs"
repository = "https://github.com/bartleboeuf/cloudshell-rs"
rust-version = "1.93.0"  # Specify minimum Rust version
categories = ["development-tools", "command-line-utilities"]
keywords = ["aws", "aws-sdk-ssm"]

[dependencies]
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.14"
aws-sdk-iam = "1.107.0"
aws-sdk-sts = "1.101.0"
aws-sdk-ssm = "1.108.0"
aws-smithy-runtime = "1.10.3"
aws-sigv4 = { version = "1.4.2", features = ["http0-compat"], default-features = false }
tokio = { version = "1.51", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json"] }
clap = { version = "4.6", features = ["derive"] }
http = "1.4"
uuid = { version = "1.23", features = ["v4"] }
crossterm = "0.29.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

# Optimize dependencies for release builds
[profile.release.package."*"]
opt-level = 3
debug = false

# Development profile optimizations
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

# selectively optimize only the heaviest crates:
[profile.dev.package.aws-sdk-ssm]
opt-level = 2

# Speed up dev builds by reducing optimization on deps
[profile.dev.package."*"]
opt-level = 1
debug = false

[[bin]]
name = "cloudshell-rs"
path = "src/main.rs"
